refactor: change structure acording to REAME.

--- a/Laby.Tests/Laby.Tests.csproj
+++ b/Laby.Tests/Laby.Tests.csproj
@@ -36,7 +36,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Labyrinth\Labyrinth.csproj" />
+    <ProjectReference Include="..\Laby.Core\Laby.Core.csproj" />
+    <ProjectReference Include="..\Laby.Algorithms\Laby.Algorithms.csproj" />
   </ItemGroup>
 
 </Project>
