--- a/Laby.Algorithms/Laby.Algorithms.csproj
+++ b/Laby.Algorithms/Laby.Algorithms.csproj
@@ -1,14 +1,13 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ApiTypes\ApiTypes.csproj" />
+    <ProjectReference Include="..\Laby.Core\Laby.Core.csproj" />
   </ItemGroup>
 
 </Project>
