--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: 9.0.x
+          dotnet-version: 10.0.x
 
       - name: Restore
         run: dotnet restore Labyrinth.sln
@@ -33,7 +33,7 @@ jobs:
         run: dotnet test Labyrinth.sln -c Release --no-build --verbosity normal
 
       - name: Publish
-        run: dotnet publish ./Labyrinth/Labyrinth.csproj -c Release -o ./out --no-build
+        run: dotnet publish ./Laby.Client.Console/Laby.Client.Console.csproj -c Release -o ./out --no-build
 
       - name: Create zip
         run: |
