--- a/Laby.Client.Console/Properties/launchSettings.json
+++ b/Laby.Client.Console/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "Laby.Client.Console": {
       "commandName": "Project",
       "commandLineArgs": "https://labyrinth.syllab.com EA2DF750-CB9F-45E1-AF92-909BE20630FB labyrinth9x7.json",
-      "workingDirectory": "C:\\Code\\cs\\console\\labyrinth\\Laby.Client.Console"
+      "workingDirectory": "."
     }
   }
 }
