--- a/Laby.Client.Console/Laby.Client.Console.csproj
+++ b/Laby.Client.Console/Laby.Client.Console.csproj
@@ -1,10 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <UserSecretsId>5587e7de-9dd7-4521-a815-3a4f7f5cbfe3</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -12,6 +13,10 @@
     <ProjectReference Include="..\Laby.Infrastructure\Laby.Infrastructure.csproj" />
     <ProjectReference Include="..\Laby.Core\Laby.Core.csproj" />
     <ProjectReference Include="..\Laby.Contracts\Laby.Contracts.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="10.0.2" />
   </ItemGroup>
 
 </Project>
