--- a/Laby.Tests/Laby.Tests.csproj
+++ b/Laby.Tests/Laby.Tests.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
@@ -42,6 +42,7 @@
     <ProjectReference Include="..\Laby.Mapping\Laby.Mapping.csproj" />
     <ProjectReference Include="..\Laby.Contracts\Laby.Contracts.csproj" />
     <ProjectReference Include="..\Laby.Server.Training\Laby.Server.Training.csproj" />
+    <ProjectReference Include="..\Laby.Client.Console\Laby.Client.Console.csproj" />
   </ItemGroup>
 
 </Project>
